fix: sticky note overlaps the footer
Fixed the issue where the footer would go under the sticky note while scrolling.

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -2,6 +2,7 @@ footer {
   min-height: 90px;
   justify-content: space-between;
   align-items: center;
+  z-index: 2000;
   transform: translateX(0) translateY(0);
   @include device("tablet") {
     position: fixed;
